dfir_rs/tests/compile-fail-stable/surface_loop_missing_windowing.rs
../compile-fail/surface_loop_missing_windowing.rs